# py-rest-template

./: .gitignore  README.md  api.py  flake.nix  main.py  pyproject.toml  requirements.txt  sessions.py
api/: __init__.py  assets.py  sessions.py  users.py
db/: __init__.py  models.py
tests/: run  sessions.hurl  tests.hurl
utils/: id.py
